[metadata]
name = display-tree
version = 0.1.0
author = ethanolx
author_email = imotekhx@gmail.com
description = A simple tree data structure utility package, with fancy displays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ethanolx/Display-Tree-py
project_urls =
    Bug Tracker = https://github.com/ethanolx/Display-Tree-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =

[options.extras_require]
dev = black

[options.packages.find]
where = src
